Working on crypto website

--- a/public_html/register/index.html
+++ b/public_html/register/index.html
@@ -30,6 +30,51 @@
 </head>
 
 <body>
-    // HTML body here
+    <div class="page-cont">
+        <div class="signup-cont ux-center-elem shadow ux-rd-corner-2">
+            <div class="left-section-cont">
+                <div class="bg-pattern-wrapper">
+                    <div class="bg-circle-1 ux-f-rd-corner"></div>
+                    <div class="bg-circle-2 ux-f-rd-corner"></div>
+                    <div class="bg-circle-3 ux-f-rd-corner"></div>
+                </div>
+                <div class="bg-image"></div>
+                <div class="text-layer ux-txt-align-ct">
+                    <div class="site-logo-cont">Websitename</div>
+                    <div class="headline-cont">
+                        <p>Register to enjoy our great packages and services exclusively design for you.</p>
+                    </div>
+                    <div class="copyright">
+                        Copyright &copy; <?php echo date("Y");?>. All Rights Reserved
+                    </div>
+                </div>
+            </div>
+            <div class="form-cont">
+                <div class="form-slide-wrapper">
+                    <div class="form-1">
+                        <h3 class="form-header-title">Personal Information</h3>
+                        <div class="input-cont">
+                            <div class="firstname-input-wrapper lb-normal-color">
+                                <label for="firstname-input">First Name</label>
+                                <input id="firstname-input" class="hr-line-input" type="text" name="firstname" />
+                            </div>
+                            <div class="lastname-input-wrapper lb-normal-color">
+                                <label for="lastname-input">Last Name</label>
+                                <input id="lastname-input" class="hr-line-input" type="text" name="lastname" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-2">
+                        <h3 class="form-header-title">Your Sign In Details</h3>
+                    </div>
+                    <div class="form-3">
+                        <h3 class="form-header-title">Personal Identification</h3>
+                    </div>
+                </div>
+                <div></div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
