--- a/public_html/index.html
+++ b/public_html/index.html
@@ -928,7 +928,7 @@
                         <li><a class="link ux-txt-smokewhite txt-hover" href="#">Contact Us</a></li>
                         <li><a class="link ux-txt-smokewhite txt-hover" href="#">FAQ</a></li>
                         <li><a class="ux-btn ux-bg-chocolate bg-hover ux-txt-white ux-rd-corner-1"
-                                href="./register/index.html">Get
+                                href="./register.html">Get
                                 Started</a></li>
                         <li><a class="link ux-txt-smokewhite txt-hover" href="#">Sign In</a></li>
                     </ul>
@@ -983,7 +983,7 @@
             </div>
             <div class="action-btn-cont">
                 <a class="ux-btn custom-action-btn ux-bg-chocolate bg-hover ux-txt-white ux-rd-corner-1 shadow"
-                    href="./register/index.html">Create Account</a>
+                    href="./register.html">Create Account</a>
             </div>
         </div>
         <!--animated image indicator-->
