Login page and security implementation

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,8 +13,8 @@
     <link type="text/css" href="./fonts/css/all.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="./styles/UdaraX.css">
     <link type="text/css" rel="stylesheet" href="./styles/homepage.css">
-    <script type="text/javascript" src="./scripts/utils.js"></script>
-    <script type="text/javascript" src="./scripts/slider.js"></script>
+    <script type="text/javascript" src="./js/utils.js"></script>
+    <script type="text/javascript" src="./js/slider.js"></script>
     <script type="text/javascript">
         function init() {
             // define and initialise variables
